--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,6 +2,7 @@
   margin: auto;
   max-width: 500px;
   font-family: sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .heading {
@@ -11,10 +12,21 @@
   display: flex;
   list-style: none;
   padding-left: 0;
+  background-color:#fae3e3;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
 .nav-link-item {
   padding-right: 2rem;
 }
 .nav-link-text {
   color: black;
+}
+
+
+.site-title {
+  font-size: 2.4rem;
+  color: gray;
+  font-weight: 700;
+
 }
