--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -13,11 +13,19 @@
   list-style: none;
   padding-left: 0;
   background-color:#fae3e3;
-  padding: 10px 20px;
+  padding: 5px 20px;
   border-radius: 5px;
 }
 .nav-link-item {
-  padding-right: 2rem;
+  margin-right: 2rem;
+  transition: 0.6s;
+  padding: 5px;
+  border-radius: 5px;
+  min-width: 60px;
+  text-align:center;
+}
+.nav-link-item:hover {
+  background-color: #ffcfcf;
 }
 .nav-link-text {
   color: black;
